[gd_scene load_steps=17 format=3 uid="uid://mdyxw4i53ahq"]

[ext_resource type="Script" uid="uid://cxf1syc5s8sln" path="res://beat_forge.gd" id="1_tpaib"]
[ext_resource type="Texture2D" uid="uid://cbiee2hoy3io" path="res://sprites/forge_bg.png" id="2_6d80v"]
[ext_resource type="Script" uid="uid://vibvs5youif5" path="res://song_importer.gd" id="2_ggl6f"]
[ext_resource type="Script" uid="uid://wncyyxgvmv1i" path="res://hammer.gd" id="3_8vckl"]
[ext_resource type="Texture2D" uid="uid://b1f7guysyc6p4" path="res://sprites/hammer.png" id="4_ggl6f"]
[ext_resource type="Texture2D" uid="uid://dssoqi6t56cvx" path="res://sprites/hammer_normal_map.png" id="5_xwgc8"]
[ext_resource type="AudioStream" uid="uid://dlvv5t4xqj76o" path="res://sfx/hit.wav" id="6_8vckl"]
[ext_resource type="Texture2D" uid="uid://ct1utql1tedjo" path="res://sprites/Anvil.png" id="6_c7p1g"]
[ext_resource type="Script" uid="uid://0s1em4wolnk4" path="res://game_clock.gd" id="8_ggl6f"]
[ext_resource type="AudioStream" uid="uid://cphyp822rxaus" path="res://tick.wav" id="8_i28h8"]
[ext_resource type="AudioStream" uid="uid://dlnftmp6ib3ce" path="res://music/demo_00.wav" id="10_8vckl"]

[sub_resource type="CanvasTexture" id="CanvasTexture_2e507"]
diffuse_texture = ExtResource("4_ggl6f")
normal_texture = ExtResource("5_xwgc8")
texture_filter = 1

[sub_resource type="Animation" id="Animation_t56mv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5707963267948966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnvilSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nil5l"]
resource_name = "hit"
length = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707963267948966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnvilSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g1fya"]
resource_name = "start_positioning"
length = 2.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.93333334, 1.7333333, 2.1666667, 2.6),
"transitions": PackedFloat32Array(2, -2, 1, -2, 1),
"update": 0,
"values": [-0.08726646259971647, 1.832595714594046, 1.4835298641951802, 1.6231562043547263, 1.5707963267948966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7333333, 2.3),
"transitions": PackedFloat32Array(1, -2, 0.5, 1),
"update": 0,
"values": [Vector2(-80, 10), Vector2(100, 0), Vector2(72, 0), Vector2(75, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nil5l"]
_data = {
&"RESET": SubResource("Animation_t56mv"),
&"hit": SubResource("Animation_nil5l"),
&"start_positioning": SubResource("Animation_g1fya")
}

[node name="BeatForge" type="Node2D"]
script = ExtResource("1_tpaib")

[node name="Jukebox" type="Node" parent="."]
script = ExtResource("2_ggl6f")

[node name="SongPlayer" type="AudioStreamPlayer" parent="Jukebox"]
stream = ExtResource("10_8vckl")
bus = &"Music"

[node name="GameClock" type="Node" parent="."]
script = ExtResource("8_ggl6f")

[node name="Timer" type="Timer" parent="GameClock"]

[node name="Background" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_6d80v")

[node name="highlightBar" type="ColorRect" parent="."]
offset_left = 352.0
offset_top = -368.0
offset_right = 407.0
offset_bottom = 368.0
color = Color(0.6313726, 1, 1, 0.19607843)

[node name="Hammer" type="Node2D" parent="."]
position = Vector2(490, -60)
script = ExtResource("3_8vckl")

[node name="Visuals" type="Node2D" parent="Hammer"]
position = Vector2(75, 0)
rotation = 1.5707964

[node name="Sprite2D" type="Sprite2D" parent="Hammer/Visuals"]
texture_filter = 1
position = Vector2(90, 6)
scale = Vector2(5, 5)
texture = SubResource("CanvasTexture_2e507")
offset = Vector2(-22.5, -1.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hammer"]
libraries = {
&"": SubResource("AnimationLibrary_nil5l")
}
autoplay = "start_positioning"

[node name="AnvilSound" type="AudioStreamPlayer" parent="Hammer"]
stream = ExtResource("6_8vckl")

[node name="sprAnvil" type="Node2D" parent="."]
position = Vector2(405, 110)

[node name="Sprite2D" type="Sprite2D" parent="sprAnvil"]
texture_filter = 1
scale = Vector2(5.5, 5.5)
texture = ExtResource("6_c7p1g")

[node name="lblTime" type="Label" parent="."]
offset_left = 320.0
offset_top = -256.0
offset_right = 504.0
offset_bottom = -208.0

[node name="lblBPM" type="Label" parent="."]
offset_left = 320.0
offset_top = -304.0
offset_right = 488.0
offset_bottom = -256.0

[node name="lblFeedback" type="Label" parent="."]
offset_left = -320.0
offset_top = 208.0
offset_right = -192.0
offset_bottom = 256.0

[node name="lblTarget" type="Label" parent="."]
offset_left = -320.0
offset_top = 160.0
offset_right = -192.0
offset_bottom = 208.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_i28h8")
volume_db = -5.0
bus = &"SFX"

[connection signal="key_pressed" from="Hammer" to="." method="_on_hammer_key_pressed"]
